Change timeline daterange to year and started timmeline implementation

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="localhost:3000/OrgChart.js"></script>
+    <!-- <script src="localhost:3000/OrgChart.js"></script>
+    <script src="lodash.js"></script> -->
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
